Fixed overflow bug in assett viewer

--- a/public/src/styles/partials/_editor.scss
+++ b/public/src/styles/partials/_editor.scss
@@ -273,7 +273,7 @@ canvas.asset {
 
 //dummy stuff:
   ul {
-    overflow-x: scroll;
+    overflow-x: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
